# cube

./: .gitignore  CMakeLists.txt  Makefile
Config/: Header.mk  Lib_libft_Objects.mk  Lib_mlx_Objects.mk  Sources.mk  Sources_Objects.mk
Config/debug/: east.xpm
include/: cube.h  cube_debug.h  cube_dependences.h  cube_errors.h  cube_function.h  cube_struct.h
lib/bettermlx/: Makefile  bettermlx.h  bettermlx_destroy_window.c  bettermlx_func.h  bettermlx_hook.c  bettermlx_init_image.c  bettermlx_pixel_put.c  bettermlx_put_image.c  bettermlx_register_loop.c  bettermlx_render.c  bettermlx_set_color.c  bettermlx_struct.h
lib/bettermlx/Config/: Header.mk  Sources.mk
lib/bettermlx/includes/: bettermlx.h  bettermlx_func.h  bettermlx_struct.h
lib/bettermlx/src/display/: bettermlx_clean_display.c  bettermlx_draw_line.c  bettermlx_get_color.c  bettermlx_get_memory_position.c
lib/bettermlx/src/window/: bettermlx_destroy_image.c  bettermlx_init_window.c  bettermlx_init_xpm_image.c
lib/libft/: Makefile  add_vector_coord.c  add_vector_vector.c  color_to_int.c  copy_str_array.c  create_color.c  create_icolor.c  create_interval.c  create_point3.c  create_vector.c  distance2.c  distance3.c  distance_point3.c  distance_square2.c  distance_square3.c  distance_square_point3.c  div_vector_coord.c  div_vector_value.c  div_vector_vector.c  ft_abs.c  ft_add_str_to_str_array.c  ft_append_char_to_str.c  ft_append_strs.c  ft_atoi.c  ft_atoll.c  ft_bzero.c  ft_calloc.c  ft_close_file.c  ft_contains_char.c  ft_count_file_lines.c  ft_create_file_content.c  ft_ctostr.c  ft_destroy_file_content.c  ft_destroy_splitted.c  ft_destroy_string_array.c  ft_fabs.c  ft_fill_file_content.c  ft_find_char.c  ft_fmax.c  ft_fmin.c  (+164 more)
lib/minilibx/: mlx.h  mlx_init_loop.m
maps/: debug.cub  minecraft.cub
src/: main.c
src/Init/: init_main_struct.c
src/debug/: debug_display.c
src/parsing/: check_format_file.c  check_texture_info.c  get_map.c  get_map_info.c  parse_map.c
src/parsing/error/: format_errors.c  texture_error.c
src/parsing/images/: get_images.c
src/parsing/utils/: check_format_file_cub.c  check_format_file_xpm.c  colors.c  size_char_tab.c  split.c
srcs/: main.c
